# SGR_agent_for_ERC3

./: .gitignore  README.MD  add_scores.py  ideas.txt
agent_api_analyser/: README.md  __init__.py  catalog_builder.py  evaluator.py  executor.py  fixture_resolver.py  report_builder.py  run.py  scenario_generator.py  scenario_logger.py  wiki_context.py  wrapper_suggester.py
agent_security_analyser/: README.md  __init__.py  cli.py  debug_failed_tasks.py  policy_planner.py  requirements.txt  security_checker.py
agent_wiki_distillator/: README.md  __init__.py  bad_policy_extractor.py  data_models.py  policy_extractor.py  wiki_annotator.py
ecom-knowledge-agent/: agent.py  answer_check.py  api_tools.py  check_parse_repair.py  check_policy_collector.py  code_executor.py  coding_executor.py  contract_validator.py  ecom_discovery.py  ecom_runtime.py  main.py  policy_collector.py  pyproject.toml  resolvers.py  task_framing.py
ecom-vanilla/: AGENT_FAILURE_NATURE_RESEARCH.md  TOOL_CALLING_FAILURE_COMPARISON.md  agent.py  main.py
sgr-agent-erc3_dev/: agent.py  data_models.py  main.py  prompts.py  tools.py
sgr-knowledge-agent-erc3_test/: .gitignore  agent.py  api_tools.py  fetch_wiki.py  main.py  requirements.txt  tools.py
sgr-knowledge-agent-store/: data_models.py  lang.py  main.py  prompts.py  requirements.txt  store_agent.py  tools.py
sgr-vanilla-agent-erc3/: main.py  requirements.txt  store_agent.py
sgr-vanilla-agent-erc3_test/: agent.py  lib.py  main.py  requirements.txt
sgr-vanilla-agent-store/: main.py  requirements.txt  store_agent.py
(+14 files in other folders)
