[project]
name = "bitgn-ecom-knowledge"
version = "0.5.4"
description = "Knowledge-augmented ECOM agent: NextStep loop + discovery + evidence ledger / finalization gate"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "bitgn-api-connectrpc-python==0.10.0.1.20260515140309+1f9ca1046f73",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260515140309+1f9ca1046f73",
    "openai>=2.26.0",
    "protobuf>=7.34.1",
    "pydantic>=2.12.5",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
package = false
